# sre_prod_sim

./: .gitignore  main.py  pyproject.toml
infra/: kind-config.yaml  otel-demo-values.yaml  versions.yaml
infra/fault_scenarios/: __init__.py  common.py  inject_bad_deploy_payment.py  inject_config_drift_kafka.py  inject_memory_leak_ad_jvm.py  inject_memory_leak_recommendation.py  inject_network_partition_payment.py  inject_oom_ad.py
infra/monitoring/: 00-namespace.yaml  01-prometheus-rbac.yaml  02-prometheus-config.yaml  03-prometheus-rules.yaml  04-prometheus-deployment.yaml  05-alertmanager-config.yaml  06-alertmanager-deployment.yaml  07-kube-state-metrics.yaml
k8s/: __init__.py  dependency_graph.py
scripts/: cleanup_fault.py  deploy_chaos_mesh.py  deploy_monitoring.py  deploy_otel_demo.py  setup_cluster.py  start_portforwards.py  stop_portforwards.py  teardown.py  verify.py
server/: __init__.py  bridge_config.yaml  config.py  live_k8s_env.py
server/k8s/: __init__.py  actions.py  alerts.py  dependency_graph.py  flagd.py  metrics.py  queries.py
server/observation/: __init__.py  fiction.py  schema.py  translator.py
